<resources>
    <string name="app_name">EasyJector</string>
    <string name="tab_text_1">Operation</string>
    <string name="tab_text_2">History</string>
    <string name="button_text_connection">Connect</string>
    <string name="button_text_connection_established">Connected</string>
    <string name="button_text_patient">Select Patient</string>
    <string name="button_text_selected">\ | Change</string>
    <string name="button_text_bottle">Select Bottle</string>
    <string name="textView_alert">Choose all parameters to Start injection.</string>
    <string name="button_select">Select</string>
    <string name="button_selected">Selected</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_connect">Check connection</string>
    <string name="textView_addUsers_info">Add/Edit Users</string>
    <string name="textView_addBottles_info">Add/Edit Bottles</string>
    <string name="input_name">First Name</string>
    <string name="input_surname">Last Name</string>
    <string name="input_age">Age</string>
    <string name="input_city">City</string>
    <string name="input_bottleID">Bottle ID</string>
    <string name="input_bottleName">Bottle Name</string>
    <string name="input_bottleVolume">Volume</string>
    <string name="input_bottleQuantity">Quantity</string>
    <string name="button_addUser">Add User</string>
    <string name="button_addBottle">Add Bottle</string>
    <string name="header_name">First Name</string>
    <string name="header_surname">Last Name</string>
    <string name="header_age">Age</string>
    <string name="header_city">City</string>
    <string name="header_bottleID">Bottle ID</string>
    <string name="header_bottleName">Bottle Name</string>
    <string name="header_bottleVolume">Volume</string>
    <string name="header_bottleQuantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="edit_delete_alert_patient">Error! You can\'t edit or delete a selected patient!</string>
    <string name="edit_delete_alert_bottle">Error! You can\'t edit or delete a selected bottle!</string>

</resources>