<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView_Bottles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/list_padding"
            android:paddingRight="@dimen/list_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorHeaderBackground"
                android:orientation="horizontal"

                android:paddingTop="@dimen/listElement_padding"
                android:paddingBottom="@dimen/listElement_padding">

                <TextView
                    android:id="@+id/textView_header_bottleID"
                    style="@style/HeaderTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_bottles_col1"
                    android:text="@string/header_bottleID" />

                <TextView
                    android:id="@+id/textView_header_bottleName"
                    style="@style/HeaderTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_bottles_col2"
                    android:text="@string/header_bottleName" />

                <TextView
                    android:id="@+id/textView_header_bottleVolume"
                    style="@style/HeaderTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_bottles_col3"
                    android:text="@string/header_bottleVolume" />

                <TextView
                    android:id="@+id/textView_header_bottleQuantity"
                    style="@style/HeaderTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/weight_bottles_col4"
                    android:text="@string/header_bottleQuantity" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_bottles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/list_padding">

                <TextView
                    android:id="@+id/textView_info_bottles"
                    style="@style/Widget.AppCompat.TextView.SpinnerItem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/input_margin"
                    android:text="@string/textView_addBottles_info" />

                <EditText
                    android:id="@+id/editText_bottleID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/input_margin"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:hint="@string/input_bottleID"
                    android:inputType="number"
                    android:padding="@dimen/input_padding" />

                <EditText
                    android:id="@+id/editText_bottleName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/input_margin"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:hint="@string/input_bottleName"
                    android:inputType="textPersonName"
                    android:padding="@dimen/input_padding" />

                <EditText
                    android:id="@+id/editText_bottleVolume"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/input_margin"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:hint="@string/input_bottleVolume"
                    android:inputType="number"
                    android:padding="@dimen/input_padding" />

                <EditText
                    android:id="@+id/editText_BottleQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/input_margin"
                    android:background="@drawable/rounded_edittext"
                    android:ems="10"
                    android:hint="@string/input_bottleQuantity"
                    android:inputType="numberSigned"
                    android:padding="@dimen/input_padding" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button_addBottle"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/button_addBottle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <Button
                        android:id="@+id/button_cancelEditingBottle"
                        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textStyle="italic"
                        android:typeface="normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:visibility="visible" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>