<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.OperationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_connection"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/operationButtons_horizontal_margin"
            android:layout_marginTop="@dimen/operationButtons_vertical_margin"
            android:layout_marginRight="@dimen/operationButtons_horizontal_margin"
            android:layout_marginBottom="@dimen/operationButtons_vertical_margin"
            android:text="@string/button_text_connection"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_patient"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/operationButtons_horizontal_margin"
            android:layout_marginTop="@dimen/operationButtons_vertical_margin"
            android:layout_marginRight="@dimen/operationButtons_horizontal_margin"
            android:layout_marginBottom="@dimen/operationButtons_vertical_margin"
            android:text="@string/button_text_patient"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_bottle"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/operationButtons_horizontal_margin"
            android:layout_marginTop="@dimen/operationButtons_vertical_margin"
            android:layout_marginRight="@dimen/operationButtons_horizontal_margin"
            android:layout_marginBottom="@dimen/operationButtons_vertical_margin"
            android:text="@string/button_text_bottle"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/text_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_alert"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>